--- a/src/pages/ProjectDashboard/TestSet/TestCaseForm.css
+++ b/src/pages/ProjectDashboard/TestSet/TestCaseForm.css
@@ -1,6 +1,6 @@
 .TestCaseFrom-header {
     background-color: #3575ba;
-    color: white;
+    color: #fff;
     padding: 5px;
 }
 
